<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://www.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>sagan_kanayama_controller</name>
  <version>0.0.0</version>
  <description>Kanayama controller for Sagan robot with action interface</description>
  <maintainer email="lucas@todo.todo">lucas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sagan_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>